# ROLL

./: .gitignore  README.md  pyproject.toml
examples/config/: mcbots_envs.yaml
jl_patch/: qwen3_5_0_8B_agentic_mcbots.yaml  qwen3_5_0_8B_agentic_sokoban.yaml  qwen3_5_27B_agentic_sokoban.yaml  qwen3_5_4B_agentic_sokoban.yaml  qwen3_5_mcbots.yaml  run_agentic_mcbots.sh  run_agentic_sokoban.sh  start_ray.sh  view_rollout_samples.py
jl_patch/docs/: mcbots_integration_progress.md
jl_patch_tt/: count_num_gpus.py  fix_vllm_qwen3_5.sh  minimal.sh  monitor.sh  qwen3_5_0_8B_agentic_mcbots.yaml  qwen3_5_0_8B_agentic_sokoban.yaml  qwen3_5_0_8B_agentic_sokoban_multinode.yaml  qwen3_5_0_8B_agentic_sokoban_think.yaml  qwen3_5_4B_agentic_mcbots.yaml  qwen3_5_4B_agentic_mcbots_multinode.yaml  qwen3_5_9B_agentic_mcbots_multinode.yaml  qwen3vl_2B_agentic_sokoban.yaml  recover_cache.sh  run_agentic_mcbots.sh  run_agentic_mcbots_multinode.sh  run_agentic_sokoban.sh  run_agentic_sokoban_multinode.sh  run_agentic_sokoban_qwen3vl2b.sh  run_agentic_sokoban_think.sh  setup.sh  setupall.sh  start_ray_2.sh  test.sh  update_cache.sh  verify_cache.sh
playground/: README.md  debug.py  fastrun.py  fastrun.sh  makegpubusy.py  ray_runtime_env_probe.py
roll/configs/: base_config.py  worker_config.py
roll/distributed/: ray_utils.py
roll/distributed/executor/: cluster.py  worker.py
roll/distributed/scheduler/: initialize.py  log_monitor.py  resource_manager.py  rollout_scheduler.py  router.py
roll/distributed/strategy/: deepspeed_strategy.py  sglang_strategy.py  vllm_strategy.py
roll/pipeline/: base_worker.py
roll/pipeline/agentic/: agentic_config.py  agentic_pipeline.py  environment_worker.py
roll/pipeline/rlvr/: rlvr_vlm_pipeline.py
roll/utils/: logging.py  network_utils.py  ray_utils.py
tests/agentic/env_manager/: test_mcbots_e2e.py  test_mcbots_env_manager.py  (+1 more)
tests/distributed/: test_ray_utils.py
(+16 files in other folders)
